# bouncing-shapes

./: .clang-format  .gitignore  CMakeLists.txt  README.md
imgui/: imconfig-SFML.h  imconfig.h  imgui.cpp  imgui.h  imgui_draw.cpp  imgui_tables.cpp  imstb_truetype.h
lib/imgui/: imgui-SFML.cpp  imgui-SFML.h  imgui-SFML_export.h  imgui_internal.h  imgui_widgets.cpp  imstb_rectpack.h  imstb_textedit.h
src/: config.txt  main.cpp
util/: pre-commit.sh
